--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="device_info">设备信息</string>
     <string name="car_master">车主服务</string>
     <string name="car_team">车队管理</string>
+    <string name="app_info">软件信息</string>
 
 
 
